# design-patterns-cpp

./: .gitignore  CMakeLists.txt  README.md
abstract-factory/: CMakeLists.txt  README.md  main.cpp
abstract-factory/include/abstract_factory/factory/: furniture_factory.h  rustic_factory.h
abstract-factory/include/abstract_factory/furniture/: classic_furniture.h  rustic_furniture.h
abstract-factory/src/: main.cpp
builder/: CMakeLists.txt  README.md  main.cpp
builder/include/builder/: computer_builder.h  gaming_computer_builder.h
builder/src/: gaming_computer_builder.cpp  main.cpp  office_computer_builder.cpp
creational-patterns/abstract-factory/: CMakeLists.txt
creational-patterns/abstract-factory/include/abstract_factory/factory/: classic_factory.h  modern_factory.h
creational-patterns/abstract-factory/include/abstract_factory/furniture/: furniture.h  modern_furniture.h
creational-patterns/builder/include/builder/: computer.h  computer_assembler.h  office_computer_builder.h
creational-patterns/builder/src/: computer.cpp  computer_assembler.cpp
creational-patterns/factory-method/: CMakeLists.txt
creational-patterns/factory-method/include/factory_method/beverage/: coffee.h  latte.h
creational-patterns/factory-method/include/factory_method/factory/: latte_factory.h
creational-patterns/prototype/include/prototype/: business_card.h  business_card_prototype_factory.h
creational-patterns/prototype/src/: main.cpp
creational-patterns/singleton/: CMakeLists.txt  README.md
creational-patterns/singleton/include/singleton/: pastry.h  pastry_factory.h
creational-patterns/singleton/src/: main.cpp  pastry.cpp  pastry_factory.cpp
factory/: CMakeLists.txt  main.cpp
factory-method/: README.md
factory-method/include/factory_method/beverage/: cappuccino.h  espresso.h
factory-method/include/factory_method/factory/: cappuccino_factory.h  coffee_factory.h  espresso_factory.h
factory-method/src/: main.cpp
prototype/: CMakeLists.txt  README.md
prototype/src/: business_card.cpp  business_card_prototype_factory.cpp
